Added Store and Loading images in ImageController #7 Configurate MonogoDB Fix Upload path in docker to sync Refactor ImageFile domain #2 Cleanup ImageStorageServices