@@ -6,11 +6,12 @@ import ink.nest.inest.domain.mongodb.ImageFile;
 import ink.nest.inest.exception.FileStorageException;
 import ink.nest.inest.exception.InternalServerException;
 import ink.nest.inest.exception.ResourceNotFoundException;
+import ink.nest.inest.properties.FileUploadProperties;
 import ink.nest.inest.repository.ImageRepository;
 import ink.nest.inest.utility.Messages;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
@@ -19,9 +20,11 @@ import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.List;
 import java.util.Objects;
+import java.util.UUID;
 
 @Service
 public class ImageStorageServiceImpl implements ImageStorageService {
@@ -29,25 +32,21 @@ public class ImageStorageServiceImpl implements ImageStorageService {
     private final ActiveUserService activeUserService;
     private final Messages messages;
     private final ImageMapper imageMapper;
-
     private final Path fileStorageLocation;
 
-    @Value("${file.upload-dir}")
-    private String uploadDir;
-
     public ImageStorageServiceImpl(ImageRepository imageRepository,
-                                ActiveUserService activeUserService,
-                                Messages messages,
-                                ImageMapper imageMapper) {
+                                   ActiveUserService activeUserService,
+                                   Messages messages,
+                                   ImageMapper imageMapper,
+                                   FileUploadProperties fileUploadProperties) {
         this.imageRepository = imageRepository;
         this.activeUserService = activeUserService;
         this.messages = messages;
         this.imageMapper = imageMapper;
-        this.fileStorageLocation = Path.of(uploadDir)
+        this.fileStorageLocation = Paths.get(fileUploadProperties.getUploadDir())
                 .toAbsolutePath()
                 .normalize();
-
-
+        System.out.println(fileUploadProperties.getUploadDir());
         try {
             Files.createDirectories(this.fileStorageLocation);
         } catch (Exception ex) {
@@ -56,14 +55,14 @@ public class ImageStorageServiceImpl implements ImageStorageService {
     }
 
     @Override
-    public ImageFileDTO saveImage(MultipartFile file) {
+    public ImageFileDTO saveImage(@NonNull MultipartFile file, @NonNull String name) {
         // Normalize file name
         String imageName = StringUtils.cleanPath(Objects.requireNonNull(file.getOriginalFilename()));
         String fileExtension;
 
         // Check if the file's name contains invalid characters
         if (imageName.contains("..")) {
-            throw new FileStorageException("Sorry! Filename contains invalid path sequence " + imageName);
+            throw new FileStorageException(messages.getExceptionMessage("file.imageNameNotValid", imageName));
         }
 
         try {
@@ -78,7 +77,7 @@ public class ImageStorageServiceImpl implements ImageStorageService {
         }
 
         ImageFile newImage = new ImageFile();
-        newImage.setName(imageName);
+        newImage.setName(name);
         newImage.setImageType(file.getContentType());
         newImage.setSize(file.getSize());
         newImage.setAccountID(activeUserService.currentAccount().getId());
@@ -94,16 +93,15 @@ public class ImageStorageServiceImpl implements ImageStorageService {
         } catch (IOException ex) {
             throw new InternalServerException(messages.getExceptionMessage("file.cannotStoreImage"), ex);
         } catch (Exception ex) {
-            throw new InternalServerException(messages.getExceptionMessage(
-                    "message.internalServerError",
-                    file.toString()
-            ));
+            ex.printStackTrace();
+//            throw new InternalServerException(messages.getExceptionMessage("message.internalServerError", name));
         }
+        return null;
     }
 
     @Override
-    public Resource loadImage(String uid) {
-        String imageURL = imageRepository.findById(uid)
+    public Resource loadImage(@NonNull UUID uid) {
+        String imageURL = imageRepository.findImageFileByUid(uid)
                 .orElseThrow(() -> new ResourceNotFoundException(
                         messages.getExceptionMessage("message.notFound",
                                 List.of(uid)
